[gd_scene load_steps=4 format=3 uid="uid://cypxxeh816ixd"]

[ext_resource type="PackedScene" uid="uid://b8aewr7debfni" path="res://src/UI/Util/Expandable Line Edit.tscn" id="1_11ujc"]
[ext_resource type="Script" path="res://src/UI/Dialog Settings/Command.gd" id="1_hik2m"]
[ext_resource type="Texture2D" uid="uid://sigthghnjsn6" path="res://Assets/UI Textures/Icon Font/delete-bin-line.svg" id="3_on8oc"]

[node name="Command" type="HBoxContainer"]
custom_minimum_size = Vector2(375, 0)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hik2m")

[node name="ExpandableLineEdit" parent="." instance=ExtResource("1_11ujc")]
custom_minimum_size = Vector2(365, 0)
layout_mode = 2

[node name="LineEdit" parent="ExpandableLineEdit/HBoxContainer" index="0"]
custom_minimum_size = Vector2(325, 25)

[node name="Button" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_on8oc")

[node name="HSeparator" type="HSeparator" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[connection signal="text_changed" from="ExpandableLineEdit" to="." method="_on_expandable_line_edit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="ExpandableLineEdit"]
